[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:BuildBackend"

[project]
name = "certportal"
version = "1.0.0"
requires-python = ">=3.11"
description = "certPortal — cloud-native multi-tenant EDI certification platform"

[tool.setuptools.packages.find]
where = ["."]
include = ["certportal*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["testing"]
